--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-  background-image:url('../images/space.gif');
+  background-image:url('../images/space.png');
   background-size: cover;
 }
 .battle_content{
