--- a/css/main.css
+++ b/css/main.css
@@ -38,23 +38,28 @@ body{
     text-align: center;
 }
 #epic_header {
+	 margin-top: 22px;
     text-align: center;
     background-color: #9c04ff;
     padding: 1px 0;
     margin-bottom: 22px;
     display:none;
+	border-radius:10px;
 }
 #common_header {
     text-align: center;
     background-color: grey;
     padding: 1px 0;
     margin-bottom: 22px;
+		 margin-top: 22px;
 }
 #group_header {
     text-align: center;
     background-color: grey;
     padding: 1px 0;
     margin-bottom: 22px;
+	border-radius:10px;
+		 margin-top: 22px;
 }
 #survial_header {
     text-align: center;
@@ -62,6 +67,8 @@ body{
     padding: 1px 0;
     margin-bottom: 22px;
     color:yellow;
+		 margin-top: 22px;
+	border-radius:10px;
 }
 .news_content{
   width: 1100px;
